Fixes picture edit button on iOS

--- a/apps/admin/src/app/modules/projects/project-picture-dropzone-preview/project-picture-dropzone-preview.component.scss
+++ b/apps/admin/src/app/modules/projects/project-picture-dropzone-preview/project-picture-dropzone-preview.component.scss
@@ -32,6 +32,7 @@
   align-items: center;
   height: 22px;
   width: 22px;
+  padding: 0;
   border: 0;
   outline: 0;
   border-radius: 50%;
